<resources>
    <string name="app_name">ChallengeOnAirAndroid</string>
    <string name="backward">뒤로가기</string>
    <string name="history">기록</string>
    <string name="history_date">8.23(목)</string>
    <string name="success">성공</string>
    <string name="fail">실패</string>
    <string name="made">내가 만든</string>
    <string name="challenge_title">[독서 챌린지] 방처음파본다...</string>
    <string name="clock_image">시계 이미지</string>
    <string name="tilde"> ~ </string>
    <string name="dot">•</string>
    <string name="read_book">독서</string>
    <string name="fee">참여비</string>
    <string name="fee_30">300</string>
    <string name="refunds">P / 환급금</string>
    <string name="refunds_400">400</string>
    <string name="points">P</string>
    <string name="search_description">SearchActivity로 전환</string>
    <string name="home_description">HomeActivity로 전환</string>
    <string name="user_profile_description">사용자 프로필</string>
    <string name="user_name">홍길동</string>
    <string name="my_profile">내 프로필</string>
    <string name="point">포인트</string>
    <string name="point_value">8,000 P</string>
    <string name="point_description">PointActivity로 전환</string>
    <string name="history_description">MyPageHistoryActivity로 전환</string>
    <string name="try_challenge">도전</string>
    <string name="try_challenge_value">5</string>
    <string name="success_challenge">성공</string>
    <string name="success_challenge_value">4</string>
    <string name="my_created_challenge">내가 만든</string>
    <string name="my_creaated_challenge_value">1</string>
    <string name="waiting_challenge">대기 중인 챌린지</string>
    <string name="waiting_challenge_value">3</string>
    <string name="customer_service">고객 센터</string>
    <string name="frequently_asked_question">자주 묻는 질문</string>
    <string name="contact_us">문의하기</string>
    <string name="user_setting">사용자 설정</string>
    <string name="delete_accout">탈퇴하기</string>
    <string name="log_out">로그아웃</string>
    <string name="challenge_image_descriptio">챌린지 이미지</string>
    <string name="my_created_banner">내가 만든</string>
    <string name="challenge_title_example">[챌린지이름] 하하하하</string>
    <string name="challenge_image_description">챌린지 이미지</string>
    <string name="challenge_step1">1</string>
    <string name="challenge_step2">2</string>
    <string name="create_challenge">챌린지 생성하기</string>
    <string name="select_challenge_category">원하는 카테고리를 선택해주세요</string>
    <string name="category_exercise">운동</string>
    <string name="category_development">자기계발</string>
    <string name="category_hobby">취미</string>
    <string name="category_study">공부</string>
    <string name="input_challenge_title">챌린지 제목을 입력해주세요</string>
    <string name="edittext_placeholder">자유롭게 남겨주세요</string>
    <string name="input_challenge_body">챌린지 내용과 인증방식을 공유해주세요</string>
    <string name="set_challenge_people_num">챌린지 최소 인원 및 최대 인원을 설정해주세요</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="min_num">2</string>
    <string name="max_num">4</string>
    <string name="set_challenge_image">이미지를 설정해주세요</string>
    <string name="previous_button">이전</string>
    <string name="next_button">다음</string>
    <string name="set_mention">챌린지 일정과 포인트를 설정해주세요.</string>
    <string name="start_time_button">시작 시간</string>
    <string name="complete_setting_button">설정 완료</string>
    <string name="end_time_button">종료 시간</string>
    <string name="set_point_button">포인트 설정</string>
    <string name="set_point">원하는 포인트를 설정해주세요</string>
    <string name="current_point">현재 잔액 포인트 : 1000 P</string>
    <string name="challenge_complete">챌린지가 예약되었습니다</string>
    <string name="example_challenge_title">[운동] \' 3대 500을 위하여 \'</string>
    <string name="example_challenge_body">2시간 달리기, 지속적으로 달리는 듯한 화면만 나와있으면 인증합니다!</string>
    <string name="people_number">인원</string>
    <string name="people_number_range">최소인원 ~ 최대인원</string>
    <string name="time">시간</string>
    <string name="example_date">10월 16일</string>
    <string name="example_start_time">14:00</string>
    <string name="example_end_time">15:00</string>
    <string name="reservation_point">예약금</string>
    <string name="example_reservation_point">500P</string>
    <string name="go_to_home">홈으로</string>
    <string name="wave">~</string>
    <string name="date">날짜</string>
    <string name="alarm">알람</string>
    <string name="read_alarm">확인완료</string>
    <string name="unread_alarm">확인</string>
    <string name="error_minimum_people_less_than_maximum">최소 인원은 최대 인원보다 작아야 합니다.</string>
    <string name="error_maximum_people_must_be_greater_than_minimum">최대 인원은 최소 인원보다 커야 합니다.</string>
    <string name="error_maximum_people_allowed">인원은 최대 4명입니다.</string>
    <string name="error_minimum_people_required">인원은 최소 2명입니다.</string>
    <string name="delete_challenge">챌린지가 삭제되었습니다.</string>
    <string name="sample_event_img">이벤트 배너 사진</string>
    <string name="event">이벤트</string>
    <string name="sample_event_banner">신규 회원 첫번째 챌린지 예약 시\n1000p 선착순 100명 증정!</string>
    <string name="category">카테고리</string>
    <string name="img_exercise_category">운동 카테고리 사진</string>
    <string name="running_and_hiking">러닝 · 등산</string>
    <string name="img_development_category">자기계발 카테고리 사진</string>
    <string name="development_example">악기 · 독서</string>
    <string name="img_hobby_category">취미 카테고리 사진</string>
    <string name="hobby_example">요리 · 뜨개질</string>
    <string name="img_study_category">공부 카테고리 사진</string>
    <string name="study_example">스터디 · 모각코</string>
    <string name="example_challenge_date">2024-10-12</string>
    <string name="challenge_name">3대 500을 위하여</string>
    <string name="exercise_example">운동 · 헬스</string>
    <string name="current_num">3</string>
    <string name="reservation_people">명 예약중</string>
    <string name="img_checkbox">체크박스 이미지</string>
    <string name="challenge_reservation_complete">챌린지 예약이 완료되었습니다.</string>
    <string name="check">확인</string>
    <string name="img_cancel">취소 이미지</string>
    <string name="challenge_delete_answer">챌린지를 삭제하시겠습니까?</string>
    <string name="can_not_rollback">삭제 후 취소는 불가합니다.</string>
    <string name="back">돌아가기</string>
    <string name="challenge_delete">챌린지 삭제하기</string>
    <string name="challenge_cancel_answer">챌린지를 취소하시겠습니까?</string>
    <string name="challenge_cancel">챌린지 취소하기</string>
    <string name="challenge_recruit">모집중</string>
    <string name="challenge_recruit_complete">모집 완료</string>
    <string name="host">방장</string>
    <string name="challenge_body">함께 운동할 사람 구합니다.\n헬스장, 홈트, 요가, 필라테스 종목 상관없이 열심히 함께 할 인원을\n구합니다.</string>
    <string name="recruit_num">모집 인원</string>
    <string name="current_num_2">2</string>
    <string name="people_num">명</string>
    <string name="slash">/</string>
    <string name="max_num_3">3</string>
    <string name="ic_current_people">현재 인원 아이콘</string>
    <string name="ic_max_people">최대 인원 아이콘</string>
    <string name="challenge_time">챌린지 시간</string>
    <string name="today">오늘</string>
    <string name="point_unit">원</string>
    <string name="enter_room">방 입장하기</string>
    <string name="participate_description">참여할래요</string>
    <string name="ic_hand">손바닥 아이콘</string>
    <string name="open_room_description">최소 인원이 모이면 방이 열릴 거예요!</string>
    <string name="participate_challenge">챌린지 참가하기</string>
    <string name="profile_modify">회원 정보 수정</string>
    <string name="img_profile">프로필 이미지</string>
    <string name="user_nickname">닉네임</string>
    <string name="change_complete">변경 완료</string>
    <string name="server_client_id">212494814785-ilbson92fbobi1lrc4olcrb4e79ka7sd.apps.googleusercontent.com</string>
    <string name="default_web_client_id">eyJhbGciOiJSUzI1NiIsImtpZCI6IjFkYzBmMTcyZThkNmVmMzgyZDZkM2EyMzFmNmMxOTdkZDY4Y2U1ZWYiLCJ0eXAiOiJKV1QifQ.eyJpc3MiOiJodHRwczovL2FjY291bnRzLmdvb2dsZS5jb20iLCJhenAiOiIyMTI0OTQ4MTQ3ODUtZ2s2b2NjYXMyYjYxdGxldmM3ZWpzb2o1anNubGRlNjQuYXBwcy5nb29nbGV1c2VyY29udGVudC5jb20iLCJhdWQiOiIyMTI0OTQ4MTQ3ODUtaWxic29uOTJmYm9iaTFscmM0b2xjcmI0ZTc5a2E3c2QuYXBwcy5nb29nbGV1c2VyY29udGVudC5jb20iLCJzdWIiOiIxMDE2MTI2NDcyODE5NjczODc5NjMiLCJlbWFpbCI6Imt5bGVpZGVhQGdtYWlsLmNvbSIsImVtYWlsX3ZlcmlmaWVkIjp0cnVlLCJuYW1lIjoiTWluaHllb2sgS2ltIiwicGljdHVyZSI6Imh0dHBzOi8vbGgzLmdvb2dsZXVzZXJjb250ZW50LmNvbS9hL0FDZzhvY0tBSk9aaHh4V3cwdWs0aThSNXdJTElTbXQ2RFlvcnR0US1ZZElqcDZ1SmtZRDlrQT1zOTYtYyIsImdpdmVuX25hbWUiOiJNaW5oeWVvayIsImZhbWlseV9uYW1lIjoiS2ltIiwiaWF0IjoxNzMxNTU0Mjc3LCJleHAiOjE3MzE1NTc4Nzd9.KjKi16Q2YyxveaoDimIosgEAyK8OB2Ovq8nnCAw_Af5JHzwB4nLAGZKE2xtaW7SYUmVDiz4QxtDcxLoV7o5ObeaklzIbc39z8ougg03_rcrNlQldV76ij80WHbXPpGgkmZT7a87X5Hfay1gp4EiXw1l3m_A-XRBymrsBHaQkGOEZSenF3W4SvgRP2IRsjFMNP-2x4kV-6bmKAcKdJTyzDFDU9N3sln2exkWcf0pxzzpxqVYSAoB16fRvufVctq8Y7xxN_rYN_3I_CwEedMQzh9mpRZbzaOvqitkgWm5Yb4y_2BB7t5O7GupPfIgY-3OVsi7idVbNbD1y8P2Kf3J6GQ</string>
    <string name="text_challenge_result_vote">챌린지 결과 투표</string>
    <string name="text_select_no_challenger">미참여자를 선택해주세요</string>
    <string name="text_select_no_challenger_description">과반수 이상이 미참여자로 선택할 경우,\n그 참여자의 포인트는 분할되어\n다른 참여자에게 돌아갑니다.</string>
    <string name="example_user1">운동을 사랑하는 남자</string>
    <string name="example_user2">해운대 김종국</string>
    <string name="example_user3">부산대 장원영</string>
    <string name="example_user4">카카오 취직시켜줘</string>
    <string name="text_vote_submit">투표 제출</string>
    <string name="count">10</string>
    <string name="text_vote_result_loading">투표 결과를 수집 중입니다</string>
    <string name="set_profile">프로필 수정</string>
</resources>