<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="challenge"
            type="com.okaka.challengeonairandroid.viewmodel.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvChallengeCover"
            android:layout_width="83dp"
            android:layout_height="83dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            android:clipChildren="true"
            android:clipToPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivChallengeCover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/sample_exercise"
                android:contentDescription="@string/challenge_image_description" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_challenge_date"
            android:textColor="@color/text_white_gray"
            android:textSize="10sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/cvChallengeCover"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvStartTime"
            android:text="@string/example_start_time"
            android:textColor="@color/text_white_gray"
            android:textSize="10sp"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@+id/tvDate"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTime"
            android:text="@string/text_tlide"
            android:textColor="@color/text_white_gray"
            android:textSize="10sp"
            android:layout_marginStart="1dp"
            app:layout_constraintStart_toEndOf="@+id/tvStartTime"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvEndTime"
            android:text="@string/example_end_time"
            android:textColor="@color/text_white_gray"
            android:textSize="10sp"
            android:layout_marginStart="1dp"
            app:layout_constraintStart_toEndOf="@+id/tvTime"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvChallengeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/challenge_name"
            android:textColor="@color/black"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/cvChallengeCover"
            app:layout_constraintTop_toBottomOf="@+id/tvDate" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_example"
            android:textColor="@color/text_gray"
            android:layout_marginStart="8dp"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/cvChallengeCover"
            app:layout_constraintTop_toBottomOf="@+id/tvChallengeName" />

        <LinearLayout
            android:id="@+id/iconContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/cvChallengeCover"
            app:layout_constraintTop_toBottomOf="@+id/tvCategory"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCurrentNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_num"
                android:textColor="@color/main_red"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/tvPeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reservation_people"
                android:textColor="@color/main_red"
                android:textSize="8sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
